Bug 72258 - Empty Options window for "Spelling and Grammar"
Summary: Empty Options window for "Spelling and Grammar"
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.2.0.0.beta1
Hardware: Other All
: medium major
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.3.0 target:4.2.0.1
Keywords: regression
: 72529 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-12-03 10:15 UTC by Thomas Hackert
Modified: 2013-12-09 18:35 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Hackert 2013-12-03 10:15:05 UTC
Hello @ll,
I hope, I have chosen the right component and severity for this bug. If not, feel free to change it adequately ... ;)

Steps to reproduce:
1. Start Writer
2. Write some text will spelling errors
3. Press <F7>
4. Click on the "Options" button

A new window titled "LibreOfficeDev 4.2" opens. It has only the buttons "OK", "Cancel" and "Help" in it, otherwise it is completely grey ... :( In my installed LO Version: 4.1.3.2 Build ID: 70feb7d99726f064edab4605a8ab840c50ec57a with Germanophone lang- as well as helppack, a click on the "Options" button opens a new window titled "Options", where I can add a new dictionary, delete or edit it etc. In LO Version: 4.2.0.0.beta1 Build ID: f4ca7b35f580827ad2c69ea6d29f7c9b48ebbac7 (parallel installed with 
Germanophone lang- as well as helppack, though it does not matter in 
this case), you only get this grey window as mentioned above ... :( So this bug is a regression in comparison to 4.1.3.2 ... :(

LO: Version: 4.2.0.0.beta1 Build ID:  f4ca7b35f580827ad2c69ea6d29f7c9b48ebbac7 (parallel installed with Germanophone lang- as well as helppack, though it does not matter in this case. This bug is reproducible with either an en-US or de-DE UI ... :( )
OS: Debian Testing AMD64

Sorry for the inconvenience
Thomas.
Comment 1 Andras Timar 2013-12-03 10:28:12 UTC
RID_SFXPAGE_LINGU is used in cui/source/dialogs/SpellDialog,cxx, too.
Comment 2 Pedro 2013-12-03 11:11:49 UTC
Confirmed with LO 4.2 Beta1 under Windows XP Pro x86 SP3 en_US

Using Windows XP I only get the title bar of the dialog, there is no dialog box at all. The only option is the close dialog button (cross on the top right corner)
Comment 3 Commit Notification 2013-12-04 11:43:31 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f8d96ebdf71f74c3608e2c6d7cc889a055ed3c2c

Resolves: fdo#72258 options is .ui now, so drop SfxNoLayoutSingleTabDialog



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2013-12-04 11:44:49 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=29fb1ed95cbd1a0baf54f8b3ce337c6f46de8e39&h=libreoffice-4-2

Resolves: fdo#72258 options is .ui now, so drop SfxNoLayoutSingleTabDialog


It will be available in LibreOffice 4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2013-12-04 12:19:12 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cce14c9717e3c21a61bbd4ce620d17fa23feafa2

Related: fdo#72258 re-orient dialog vertically



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2013-12-04 12:20:30 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d517ac379f0fa6ee77bdbb3940c6ffb840032c0b&h=libreoffice-4-2

Related: fdo#72258 re-orient dialog vertically


It will be available in LibreOffice 4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Stanislav Horacek 2013-12-09 18:35:54 UTC
*** Bug 72529 has been marked as a duplicate of this bug. ***