Resolves: fdo#72258 options is .ui now, so drop SfxNoLayoutSingleTabDialog

Change-Id: Ie1def5b116c4b998e62f840b992633a8c0d4d61a